--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
         <ul>
           <li><a href="index.html" class="transition">HOME</a></li>
           <!-- <li><a href="showcase.html">SHOWCASE</a></li> -->
-          <li><a href="Aditya.html" class="transition">ABOUT US</a></li>
+          <li><a href="wave.html" class="transition">ABOUT US</a></li>
           <li><a href="services.html" class="transition">SERVICES</a></li>
           <!-- <li><a href="news.html" class="transition">NEWS</a></li> -->
           <!-- <li><a href="contact.html" class="transition">CONTACT</a></li> -->
