--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 <!-- <meta name="twitter:image" content="http://www.acrocapoeira.com/wave/preview.png"> -->
 
 <!-- FAVICON FILES -->
-<!-- <link href="ico/apple-touch-icon-144-precomposed.png" rel="apple-touch-icon-precomposed" sizes="144x144">
-<link href="ico/apple-touch-icon-114-precomposed.png" rel="apple-touch-icon-precomposed" sizes="114x114">
-<link href="ico/apple-touch-icon-72-precomposed.png" rel="apple-touch-icon-precomposed" sizes="72x72">
-<link href="ico/apple-touch-icon-57-precomposed.png" rel="apple-touch-icon-precomposed"> -->
+<link href="ico/my logo.png" rel="apple-touch-icon-precomposed" sizes="144x144">
+<link href="ico/my logo.png" rel="apple-touch-icon-precomposed" sizes="114x114">
+<link href="ico/my logo.png" rel="apple-touch-icon-precomposed" sizes="72x72">
+<link href="ico/my logo.png" rel="apple-touch-icon-precomposed">
 <link href="images/favicon logo.png" rel="shortcut icon">
 
 <!-- CSS FILES -->
